eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ytter-api-service
spec:
  selector:
    app: ytter-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: http-server
      name: http-service
    - protocol: TCP
      port: 50051
      targetPort: grpc-server
      name: grpc-service
  type: ClusterIP
