eks/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ytter-ingress-grpc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
  - host: "gapi.ytter.co.uk"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ytter-api-service
            port:
              number: 50051
  tls:
  - hosts:
    - gapi.ytter.co.uk
    secretName: ytter-gapi-cert
